[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus",email = "marcusowlvl1@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
