[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus", email = "marcusowlvl1@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-debug-toolbar (>=7.0.0,<8.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "black (>=24.0.0,<25.0.0)",
    "flake8 (>=7.0.0,<8.0.0)",
    "mypy (>=1.8.0,<2.0.0)",
    "isort (>=5.13.0,<6.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 91

[tool.flake8]
max-line-length = 91

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "migrations",
    "__pycache__",
    "tests"
]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "bookstore.settings"
ignore_errors = true